// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots WaterfallTaskStatusIcon Failed Icon 1`] = `
<a
  aria-disabled={false}
  aria-label="task icon"
  className="leafygreen-ui-12hedrr"
  data-cy="waterfall-task-status-icon"
  href="/task/task"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  <div
    className="leafygreen-ui-xhlipt"
  >
    <svg
      aria-label="X Icon"
      className="leafygreen-ui-14toih"
      fill="none"
      height={16}
      role="img"
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M12.203 3.404a1 1 0 00-1.414 0L8.314 5.879 5.839 3.404a1 1 0 00-1.414 0l-.707.707a1 1 0 000 1.414L6.192 8l-2.474 2.475a1 1 0 000 1.414l.707.707a1 1 0 001.414 0l2.475-2.475 2.475 2.475a1 1 0 001.414 0l.707-.707a1 1 0 000-1.414L10.435 8l2.475-2.475a1 1 0 000-1.414l-.707-.707z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
</a>
`;

exports[`Storyshots WaterfallTaskStatusIcon Success Icon 1`] = `
<a
  aria-disabled={false}
  aria-label="task icon"
  className="leafygreen-ui-12hedrr"
  data-cy="waterfall-task-status-icon"
  href="/task/task"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  <div
    className="leafygreen-ui-xhlipt"
  >
    <svg
      aria-label="Checkmark Icon"
      className="leafygreen-ui-ifwzrn"
      fill="none"
      height={16}
      role="img"
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
</a>
`;
